Setup application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=BTPN Online Shop
+spring.messages.basename=message
+
+# PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/online_shop
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
+
+# Hibernate
+spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.show_sql=true
+
+# JWT
+jwt.secret=jf493flofejsighu304u2j95348tghfwefjh348tysr0g39538
+jwt.expirationMs=86400000
+
+# minio
+minio.url=https://localhost:9002
+minio.username=miniouser
+minio.password=miniopassword
+minio.bucketName=btpn-online-shop
+
+# Server
+server.port=8081
