--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.hikari.maximum-pool-size=50
 # Hibernate
 spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.show_sql=true
 
 # JWT
