--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,9 +1,12 @@
-customer.validation.customerID.required = Customer ID is required
-customer.validation.name.required = Customer name is required
+customer.create.success = Customer {0} created successfully!
 customer.validation.address.required = Customer address is required
 customer.validation.code.required = Customer code is required
-customer.validation.phone.required = Customer phone is required
+customer.validation.code.isExist = Customer code already exist
+customer.validation.customerID.required = Customer ID is required
 customer.validation.isActive.required = Customer isActive is required
+customer.validation.name.required = Customer name is required
+customer.validation.phone.required = Customer phone is required
+customer.validation.phone.isExist = Customer phone already exist
 
 
 pageNumber.required = pageNumber is required
