Successfully upload to minio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=BTPN Online Shop
 spring.messages.basename=message
+spring.servlet.multipart.max-file-size: 20MB
+spring.servlet.multipart.max-request-size: 200MB
 
 # PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -21,7 +23,7 @@ jwt.secret=jf493flofejsighu304u2j95348tghfwefjh348tysr0g39538
 jwt.expirationMs=86400000
 
 # minio
-minio.url=https://localhost:9002
+minio.url=http://localhost:9000
 minio.username=miniouser
 minio.password=miniopassword
 minio.bucketName=btpn-online-shop
