--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,4 +1,4 @@
-customer.create.success = Customer {0} created successfully!
+customer.created.success = Customer {0} created successfully!
 customer.validation.address.required = Customer address is required
 customer.validation.code.required = Customer code is required
 customer.validation.code.isExist = Customer code already exist
