Add endpoint '/customer/delete/:customerID'

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,4 +1,5 @@
 customer.created.success = Customer {0} created successfully!
+customer.deleted.success = Customer {0} deleted successfully!
 customer.retrieved.success = Customer {0} retrieved successfully!
 customer.updated.success = Customer {0} updated successfully!
 customer.validation.address.required = Customer address is required
