--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=BTPN Online Shop
 spring.messages.basename=message
 spring.servlet.multipart.max-file-size: 20MB
 spring.servlet.multipart.max-request-size: 200MB
+logging.level.root=INFO
 
 # PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
