--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -11,6 +11,7 @@ customer.validation.isActive.required = Customer isActive is required
 customer.validation.name.required = Customer name is required
 customer.validation.phone.required = Customer phone is required
 customer.validation.phone.isExist = Customer phone already exist
+customers.retrieved.success = Customers retrieved successfully!
 
 
 pageNumber.required = pageNumber is required
