Completing swagger anotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ minio.password=miniopassword
 minio.bucketName=btpn-online-shop
 
 # Server
+server.address=localhost
 server.port=8080
 
 # Swagger
