Add create item functionality

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -5,14 +5,21 @@ customer.updated.success = Customer {0} updated successfully!
 customer.validation.address.required = Customer address is required
 customer.validation.code.required = Customer code is required
 customer.validation.code.isExist = Customer code already exist
-customer.validation.customerID.required = Customer ID is required
-customer.validation.customerID.invalid = Customer ID is invalid
+customer.validation.customerID.required = customerID is required
+customer.validation.customerID.invalid = customerID is invalid
 customer.validation.isActive.required = Customer isActive is required
 customer.validation.name.required = Customer name is required
 customer.validation.phone.required = Customer phone is required
 customer.validation.phone.isExist = Customer phone already exist
 customers.retrieved.success = Customers retrieved successfully!
 
+item.created.success = Item {0} created successfully!
+item.validation.name.required = Item name is required
+item.validation.code.isExist = Item code is exist
+item.validation.code.required = Item code is required
+item.validation.stock.required = Item stock is required
+item.validation.price.required = Item price is required
+item.validation.isAvailable.required = Item isAvailable is required
 
 pageNumber.required = pageNumber is required
 pageSize.required = pageSize is required
