Add update item functionality

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -14,12 +14,15 @@ customer.validation.phone.isExist = Customer phone already exist
 customers.retrieved.success = Customers retrieved successfully!
 
 item.created.success = Item {0} created successfully!
-item.validation.name.required = Item name is required
+item.updated.success = Item {0} updated successfully!
 item.validation.code.isExist = Item code is exist
 item.validation.code.required = Item code is required
-item.validation.stock.required = Item stock is required
-item.validation.price.required = Item price is required
 item.validation.isAvailable.required = Item isAvailable is required
+item.validation.itemsID.invalid = itemsID is invalid
+item.validation.itemsID.required = itemsID is exist
+item.validation.name.required = Item name is required
+item.validation.price.required = Item price is required
+item.validation.stock.required = Item stock is required
 
 pageNumber.required = pageNumber is required
 pageSize.required = pageSize is required
