Add functionalities: 1. List items 2. Detail item 3. Delete item

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -14,6 +14,8 @@ customer.validation.phone.isExist = Customer phone already exist
 customers.retrieved.success = Customers retrieved successfully!
 
 item.created.success = Item {0} created successfully!
+item.deleted.success = Item {0} deleted successfully!
+item.retrieved.success = Item {0} retrieved successfully!
 item.updated.success = Item {0} updated successfully!
 item.validation.code.isExist = Item code is exist
 item.validation.code.required = Item code is required
@@ -23,6 +25,7 @@ item.validation.itemsID.required = itemsID is exist
 item.validation.name.required = Item name is required
 item.validation.price.required = Item price is required
 item.validation.stock.required = Item stock is required
+items.retrieved.success = Items retrieved successfully!
 
 pageNumber.required = pageNumber is required
 pageSize.required = pageSize is required
