Move message to Constants

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -2,14 +2,14 @@ customer.created.success = Customer {0} created successfully!
 customer.deleted.success = Customer {0} deleted successfully!
 customer.retrieved.success = Customer {0} retrieved successfully!
 customer.updated.success = Customer {0} updated successfully!
-customer.validation.address.required = Customer address is required
-customer.validation.code.required = Customer code is required
+customer.validation.address.required = address is required
+customer.validation.code.required = code is required
 customer.validation.code.isExist = Customer code already exist
-customer.validation.customerID.required = customerID is required
+customer.validation.customerID.required customerID is required
 customer.validation.customerID.invalid = customerID is invalid
-customer.validation.isActive.required = Customer isActive is required
-customer.validation.name.required = Customer name is required
-customer.validation.phone.required = Customer phone is required
+customer.validation.isActive.required = isActive is required
+customer.validation.name.required = name is required
+customer.validation.phone.required = phone is required
 customer.validation.phone.isExist = Customer phone already exist
 customers.retrieved.success = Customers retrieved successfully!
 
@@ -18,14 +18,22 @@ item.deleted.success = Item {0} deleted successfully!
 item.retrieved.success = Item {0} retrieved successfully!
 item.updated.success = Item {0} updated successfully!
 item.validation.code.isExist = Item code is exist
-item.validation.code.required = Item code is required
-item.validation.isAvailable.required = Item isAvailable is required
+item.validation.code.required = code is required
+item.validation.isAvailable.required = isAvailable is required
 item.validation.itemsID.invalid = itemsID is invalid
 item.validation.itemsID.required = itemsID is exist
-item.validation.name.required = Item name is required
-item.validation.price.required = Item price is required
-item.validation.stock.required = Item stock is required
+item.validation.name.required = name is required
+item.validation.price.required = price is required
+item.validation.stock.required = stock is required
 items.retrieved.success = Items retrieved successfully!
+
+order.validation.code.required = code is required
+order.validation.orderDate.required = orderDate is required
+order.validation.orderID.required = orderID is required
+order.validation.totalPrice.required = totalPrice is required
+order.validation.customerID.required = customerID is required
+order.validation.itemsID.required = itemsID is required
+order.validation.quantity.required = quantity is required
 
 pageNumber.required = pageNumber is required
 pageSize.required = pageSize is required
