--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,40 +1,37 @@
+customer.address.required = address is required
+customer.code.isExist = Customer code already exist
+customer.code.required = code is required
 customer.created.success = Customer {0} created successfully!
 customer.deleted.success = Customer {0} deleted successfully!
+customer.isActive.required = isActive is required
+customer.name.required = name is required
+customer.phone.isExist = Customer phone already exist
+customer.phone.required = phone is required
 customer.retrieved.success = Customer {0} retrieved successfully!
 customer.updated.success = Customer {0} updated successfully!
-customer.validation.address.required = address is required
-customer.validation.code.required = code is required
-customer.validation.code.isExist = Customer code already exist
-customer.validation.customerID.required customerID is required
-customer.validation.customerID.invalid = customerID is invalid
-customer.validation.isActive.required = isActive is required
-customer.validation.name.required = name is required
-customer.validation.phone.required = phone is required
-customer.validation.phone.isExist = Customer phone already exist
 customers.retrieved.success = Customers retrieved successfully!
+customerID.invalid = customerID is invalid
+customerID.required = customerID is required
 
 item.created.success = Item {0} created successfully!
+item.code.isExist = Item code is exist
+item.code.required = code is required
 item.deleted.success = Item {0} deleted successfully!
+item.isAvailable.required = isAvailable is required
+item.name.required = name is required
+item.price.required = price is required
 item.retrieved.success = Item {0} retrieved successfully!
+item.stock.required = stock is required
 item.updated.success = Item {0} updated successfully!
-item.validation.code.isExist = Item code is exist
-item.validation.code.required = code is required
-item.validation.isAvailable.required = isAvailable is required
-item.validation.itemsID.invalid = itemsID is invalid
-item.validation.itemsID.required = itemsID is exist
-item.validation.name.required = name is required
-item.validation.price.required = price is required
-item.validation.stock.required = stock is required
 items.retrieved.success = Items retrieved successfully!
+itemsID.invalid = itemsID is invalid
+itemsID.required = itemsID is required
 
-order.validation.code.required = code is required
-order.validation.orderDate.required = orderDate is required
-order.validation.orderID.required = orderID is required
-order.validation.totalPrice.required = totalPrice is required
-order.validation.customerID.required = customerID is required
-order.validation.itemsID.required = itemsID is required
-order.validation.quantity.required = quantity is required
+order.created.success = Order {0} created successfully!
+order.orderID.required = orderID is required
+order.quantity.required = quantity is required
 
 pageNumber.required = pageNumber is required
 pageSize.required = pageSize is required
+quantity.invalid = quantity is invalid
 sortDirection.required = sortDirection is required
