--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -28,8 +28,10 @@ itemsID.invalid = itemsID is invalid
 itemsID.required = itemsID is required
 
 order.created.success = Order {0} created successfully!
-order.orderID.required = orderID is required
 order.quantity.required = quantity is required
+order.updated.success = Order {0} updated successfully!
+orderID.invalid = orderID is invalid
+orderID.required = orderID is required
 
 pageNumber.required = pageNumber is required
 pageSize.required = pageSize is required
