Add functionalities: 1. Get detail order 2. Delete order 3. List orders

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -28,10 +28,12 @@ itemsID.invalid = itemsID is invalid
 itemsID.required = itemsID is required
 
 order.created.success = Order {0} created successfully!
+order.retrieved.success = Order {0} retrieved successfully!
 order.quantity.required = quantity is required
 order.updated.success = Order {0} updated successfully!
 orderID.invalid = orderID is invalid
 orderID.required = orderID is required
+orders.retrieved.success = Orders retrieved successfully!
 
 pageNumber.required = pageNumber is required
 pageSize.required = pageSize is required
