--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,14 +14,14 @@ spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=50
 
 # Hibernate
-spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto = validate
-spring.jpa.properties.hibernate.show_sql=true
 
-# JWT
-jwt.secret=jf493flofejsighu304u2j95348tghfwefjh348tysr0g39538
-jwt.expirationMs=86400000
+# Enable logging of SQL parameters
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 # minio
 minio.url=http://localhost:9000
