--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.hibernate.ddl-auto = validate
 
 # Enable logging of SQL parameters
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 # minio
 minio.url=http://localhost:9000
