--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 	<dependencies>
 
 	   <dependency>
+	      <groupId>net.sf.jasperreports</groupId>
+	      <artifactId>jasperreports</artifactId>
+	      <version>6.21.3</version>
+	   </dependency>
+
+
+	   <dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-thymeleaf</artifactId>
 	      <version>3.3.0</version>
