--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=BTPN Online Shop
+spring.application.name=Simple Online Shop
 spring.messages.basename=message
 spring.servlet.multipart.max-file-size: 20MB
 spring.servlet.multipart.max-request-size: 200MB
@@ -27,7 +27,7 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 minio.url=http://localhost:9000
 minio.username=miniouser
 minio.password=miniopassword
-minio.bucketName=btpn-online-shop
+minio.bucketName=simple-online-shop
 
 # Server
 server.address=localhost
